--- a/en/guard.html
+++ b/en/guard.html
@@ -267,8 +267,10 @@ You need to import keyring from other system, e.g. Linux, and when backup or cha
 <p>Your help will drive us to improve it to better, please kindly report your feature request or issue on Github:<br></b><a href="https://github.com/chengdu/Guard7" target="_blank"> → https://github.com/chengdu/Guard7</a>, thanks.</p>
 
 
+<div style="display:none;">
 <h2>Need Your Help</h2>
 <p>There're several graphical frontend for GnuPG was proposed to running on other platforms and will be released as free software forever, including Windows, Linux, iOS and Android, the author of Guard7 can make them but no enough time to accomplish them, please contact us if you're interested in making any one of them and willing to do contribution to free software world.</p>
+</div>
 
 <h2>Why Guard7 is free?</h2>
 <p>Mac OS X should has such a valuable and useful tool like Guard7 that can encrypt confidential information simple, easy and free.</p>
