--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -22,11 +22,13 @@
 </head>
 <body>
 
+
 <div class="container-fluid">
 
     <div class="jumbotron">
         <p><img src="../images/littlefox/logo.png" style="width: 120px;" /></p>
-        <h1>LittleFox<br><em>Version 1.5.14</em></h1>
+        <h1>LittleFox</h1>
+        <p class="greenbig">Subtitle audio and video so easy.</p>
         <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, or just scale the resolution of your videos to slim them so that you can very easily share them with a very small file size.</p>
     </div>
     
