--- a/en/speare.html
+++ b/en/speare.html
@@ -14,7 +14,7 @@
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Speare,IDE,Code Editor,Text Editor,Ruby Debugger,mruby Debugger,Lua Debugger,Python Debugger,PHP Debugger,Syntax Highlighting,Lex,Parser,Compiler,Interpreter,Programming Language,TextEdit,Vim,Emacs,Qt,GTK+,Tcl/Tk,TextMate,CotEditor,Textadept,Android Studio,ActiveState,Komodo,Xcode,Lazarus,ZeroBraneStudio,Visual Studio Code,Eclipse,Scrpting Language,Lua,Scheme,Python,Ruby,C,C++,SQL,Objective-C,Swift,Kotlin,Haxe,Haskell,TCL,Javascript,Lisp,Perl,PHP,GO,Markdown,Node">
-<title>Speare code editor</title>
+<title>Crafting code with Speare code editor</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
 <script src="../js/jquery.min.js"></script>
