--- a/en/speare.html
+++ b/en/speare.html
@@ -43,6 +43,11 @@
 2. Highlighting files that has no extension name by recognise its Shebang, i.s. the first line of the text file.
 </p>
 
+
+<h2>Fast editing source code files in big project</h2>
+<p>Drag a folder into Speare code editor from Finder never mind how big it is and then edit source code files never mind what programming language they were written! Speare code editor can provide you the relations between the symbol definitions almost in real time!</p>
+
+
 <h2>Code editor on iPad</h2>
 <p>If you want to edit source code files on iPad, or review code on iPad, please refer another app developed by me, <a href="powerreader.html">iCodeEditor</a>, an integrated code editor for iPad. Sorry, it's not free.</p>
 
