--- a/en/speare.html
+++ b/en/speare.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.93 </em></h1>
+        <h1>Speare<br><em>Version 1.2.94 </em></h1>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
     </div>
@@ -40,7 +40,7 @@
 
 <h2 class="dark">What's new</h2>
 <p class="dark">1. Improvement of "Lite Mode", i.e. hide toolbar and left side TreeView, this is useful and feels more light when open and edit several file but not work on a project that has large number of files. This function turn Speare to a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc.<br>
-2. Highlighting files that has no extension name by recognise its Shebang, i.s. the first line of the text file.
+2. Highlighting files that has no extension name by recognise its Shebang, i.e. the first line of the text file.
 </p>
 
 
