--- a/en/speare.html
+++ b/en/speare.html
@@ -167,6 +167,20 @@
 <p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl script, more info see here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
 
 
+
+<h2>Syntax Checking and Run Code Instantly</h2>
+<p>a. Press shortcut key "Command + R".<br>
+b. Click menu: File → Run External Command.<br>
+</p>
+
+
+
+<h2>Integrated development environment</h2>
+<p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, PMD, etc), and any other tasks. Speare code editor provides you complete freedom to extend the IDE to satisfy special requirements of your development environment. 
+</p>
+
+
+
 <h2>Programming Languages and Document Types</h2>
 <p class="small">
 AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant Apache <gr>Applescript</gr> Asciidoc AutoIt Autoconf Automake <gr>Basic</gr> Batch Beta Bibtex <gr>C</gr> C# <gr>C++</gr> CMake CPrePro <gr>CSS</gr> Scss CUDA Clojure Cobol <gr>CoffeeScript</gr> ColdFusion Csound Ctags D DTS DbusIntrospect <gr>Diff</gr> DosBatch PowerShell Dtd Dylan <gr>Eiffel</gr> Elixir Elm <gr>Erlang</gr> eZ Publish F-Script Falcon Flex <gr>Forth</gr> <gr>Fortran</gr> FreeFem++ Fypp GEDCOM Gdbinit Glade <gr>Go</gr> Gradle GraphViz Groovy <gr>Haskell</gr> <gr>HTML</gr> <gr>Haxe</gr> Header IDL ITcl Iniconf Inko JSP Java JavaFX JavaProperties <gr>JavaScript</gr> Json <gr>Julia</gr> Kotlin Kuin LSL LaTeX LdScript Lilypond <gr>Lisp</gr> Logtalk <gr>Lua</gr> M4 MEL Makefile Man <gr>Markdown</gr> <gr>MATLAB</gr> Maven2 MetaPost Metaslang Moose MySQL Myrddin NASL NEURON Nemerle <gr>Objective-C</gr> Octave <gr>Ocaml</gr> Ox PDF <gr>PHP</gr> Parrot <gr>Pascal</gr> Passwd <gr>Perl</gr> <gr>Perl6</gr> Pig Plist Pod PostScript <gr>Prolog</gr> <gr>Processing</gr> Protobuf Puppet PuppetManifest <gr>Python</gr> PythonLoggingConfig QemuHX QtMoc <gr>R</gr> R/S-PLUS RHTML RSpec RelaxNG Rexx Robot <gr>Racket</gr> RpmSpec Rst <gr>Ruby</gr> <gr>mruby</gr> <gr>Rust</gr> SGML SML <gr>SQL</gr> Scala <gr>Scheme</gr> Sedona <gr>Shell</gr> Slang Smalltalk Snippets Stata SuperCollider SVG <gr>Swift</gr> SystemTap SystemdUnit TTCN <gr>Tcl</gr> Tcl/Tk Tex TorqueScript <gr>TypeScript</gr> Udo VB VB.NET VHDL Vera <gr>Verilog</gr> <gr>SystemVerilog</gr> Vim WSDL WindRes <gr>XML</gr> XSD Xquery Xslt Yacc <gr>YAML</gr> YumRepo Zephir</p>
