--- a/en/speare.html
+++ b/en/speare.html
@@ -167,16 +167,14 @@
 <p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl script, more info see here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
 
 
-
 <h2>Syntax Checking and Run Code Instantly</h2>
 <p>a. Press shortcut key "Command + R".<br>
 b. Click menu: File → Run External Command.<br>
 </p>
 
 
-
 <h2>Integrated development environment</h2>
-<p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, PMD, etc), and any other tasks. Speare code editor provides you complete freedom to extend the IDE to satisfy special requirements of your development environment. 
+<p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, PMD, etc), memory leak detection tool such as Valgrind, code style check tool, and any other tasks. Speare code editor provides you complete freedom to extend the IDE to satisfy special requirements of your development environment. 
 </p>
 
 
