--- a/en/speare.html
+++ b/en/speare.html
@@ -174,7 +174,7 @@ b. Click menu: File → Run External Command.<br>
 
 
 <h2>Integrated development environment</h2>
-<p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, PMD, etc), memory leak detection tool such as Valgrind, code style check tool, and any other tasks. Speare code editor provides you complete freedom to extend the IDE to satisfy special requirements of your development environment. 
+<p>Speare code editor can easily integrate building tools, code analysis tools and continue deploy tools. You can run different tasks in Speare code editor instantly, such as automatic compile (run makefile, CMake, Ant tasks etc), building and packing, or run static code analysis tools (source code analyzer, such as PC-Lint, clang-analyzer, PHPLint, OCLint, PMD, etc), unit testing tools, memory leak detection tools such as Valgrind, performance analysis tools, code style check tools, and any other tasks. Speare code editor provides you complete freedom to extend the IDE to satisfy special requirements of your development environment. 
 </p>
 
 
