--- a/en/debugger.html
+++ b/en/debugger.html
@@ -140,6 +140,7 @@ If you can't write quality C code, that means you're not a real programmer. Most
 </p>
 
 
+<p>Crafting software as small as possible!</p>
 
 
 <div class="row">
