--- a/en/apps.html
+++ b/en/apps.html
@@ -35,10 +35,11 @@
     
 <div class="row">
 <div class="col-md-4">
-<p><a href="mathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a></p>
-<h2>MathHelfer</h2>
-<p><a href="mathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
+<p><a href="sounler.html"><img src="../images/sounler/logo.png" class="macapp" /></a></p>
+<h2>Sounler</h2>
+<p><a href="sounler.html">Sounler</a> is a small audio player developed to play various of audio format on NES (Nintendo Entertainment System), SNES (Super Nintendo Entertainment System), GBA (Game Boy Advance), WII, NDS, 3DS, N64, GameCube, and PS1 (Sony PlayStation 1), PS2 (Sony PlayStation 2) and PSP (Sony PlayStation Portable), PSX, and Sega Genesis, Sega Mega Drive, Sega Dreamcast, and Microsoft XBOX, and DOS, Amiga, Spectrum and more.</p>
 </div> <!-- col-md-4-->
+
 
 <div class="col-md-4">
 <p><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a></p>
@@ -46,14 +47,23 @@
 <p>The free small IDE for scripting languages.<br><br> <a href="speare.html"><b>Speare</b></a> is an ultra lightweight code editor and a small IDE that provides builtin debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</p>
 </div> <!-- col-md-4-->
 
+
+<div class="col-md-4">
+<p><a href="mathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a></p>
+<h2>MathHelfer</h2>
+<p><a href="mathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
+</div> <!-- col-md-4-->
+</div><!-- row -->
+
+
+<div class="row">
 <div class="col-md-4">
 <p><a href="littlefox.html"><img src="../images/littlefox/logo.png" class="macapp" /></a></p>
 <h2>LittleFox</h2>
 <p><a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
 </div> <!-- col-md-4-->
-</div><!-- row -->
 
-<div class="row">
+
 <div class="col-md-4">
 <p><a href="guard.html"><img src="../images/guard/guard7_logo.png" class="macapp" /></a></p>
 <h2>Guard7</h2>
@@ -67,17 +77,18 @@
 <p><a href="beak.html"><b>Beak</b></a> is a small utility used to reduce binary size of your software for embedded systems, and also an ultra small C and C++ obfuscator that used to encrypt source code of your software. 
 </p>
 </div> <!-- col-md-4-->
+</div><!-- row -->
 
+
+<div class="row">
 <div class="col-md-4">
 <p><a href="lyricsmaker.html"><img src="../images/lyricsmaker/logo.png" class="macapp" /></a></p>
 <h2>LyricsMaker</h2>
 <p><a href="lyricsmaker.html"><b>LyricsMaker</b></a> is a small tool that was designed to easily make lyrics sheet for music or generate subtitle for movie on macOS.
 </p>
 </div> <!-- col-md-4-->
-</div><!-- row -->
 
 
-<div class="row">
 <div class="col-md-4">
 <p><a href="uftp.html"><img src="../images/uftp/logo.png" class="macapp" /></a></p>
 <h2>uFTP Server</h2>
@@ -89,10 +100,9 @@
 <p><a href="taihaa.html"><img src="../images/Taihaa/logo.png" class="macapp" /></a></p>
 <p><a href="taihaa.html"><b>Taihaa</b></a> is a fate telling app. It's a high precision fate analysis engine and high accuracy fate telling app designed for embedded systems that can be developed as standalone machine or handheld device. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report.</p>
 </div> <!-- col-md-4-->
-
-<div class="col-md-4">
-</div> <!-- col-md-4-->
 </div><!-- row -->
+
+
 
 <hr>
 <h1>iOS Apps</h1>
