--- a/en/index.html
+++ b/en/index.html
@@ -29,8 +29,8 @@
 
 <div class="container-fluid">
 
-<div class="jumbotron">
 
+<div class="jumbotron">
        
 <div><pre class="green">
    ____
@@ -38,17 +38,26 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Code Editor v1.2.83
+Speare Code Editor v1.2.96
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></div>
    
-    
+ 
 <h1>Speare code editor</h1>
 <p><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.
 </p>
 
-</div> 
+</div> <!-- jumbotron -->
+
+<h2>Sounler</h2>
+<p>
+<a href="http://www.sevenuc.com/en/sounler.html" target="_blank"><img src="http://www.sevenuc.com/images/sounler/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;height:160px; width:auto;">
+<a href="http://www.sevenuc.com/en/sounler.html">Sounler</a> is a small audio player developed to play various of audio format on NES (Nintendo Entertainment System), SNES (Super Nintendo Entertainment System), GBA (Game Boy Advance), WII, NDS, 3DS, N64, GameCube, and PS1 (Sony PlayStation 1), PS2 (Sony PlayStation 2) and PSP (Sony PlayStation Portable), PSX, and Sega Genesis, Sega Mega Drive, Sega Dreamcast, and Microsoft XBOX, and DOS, Amiga, Spectrum and more.</p>
+
+
+<p><br><br><br><br><br><br><br><br></p>
+
 
 	
 <footer>
