--- a/en/sounler.html
+++ b/en/sounler.html
@@ -26,7 +26,7 @@
 <div class="container-fluid">
     <div class="jumbotron">
         <p><img src="../images/sounler/logo.png" style="width: 120px;" /></p>
-        <h1>Sounler</em></h1>
+        <h1>Sounler<br><em>Version 1.1</em></h1>
         <p class="greenbig"><em>The small audio player for chiptune.</em></p>
         <p class="lead">A small chiptune player for all platforms. <b>Sounler</b> is a small audio player originally developed to play various of audio format from popular arcade games and video games in later 80s and early 90s, i.e. the golden legend era. Sounler especially developed for chiptune, a.k.a video game music, so it supports almost all kinds of audio file format exists in NES(Famicom), SNES, GBA, N64, PSX, PS2, PSP, SMD, XBOX, GAMECUBE, WII, NDS, 3DS and DOS etc. It's also a powerful util used to classify and organise audio file by Game, Movie, Category, Platform, Genre, Album, Artist, and other metadata of audio file. Sounler can not only playback almost all kinds of popular golden era audio formats such as SPC, NSF, PSF, VGM, XM, MSX etc, but also supports mordern common mostly used audio file formats on Unix, Linux, macOS and Windows, e.g, MP3, Ogg, AAC/M4A, WMA, FLAC, etc. Sounler help you organise large amount of audio resources by Game, Movie or Vendor in a very flexible way, and has completely control to define any type of metadata fields for management of classification and audio file organisation. Sounler also can be simply used to convert audio file format or reset metadata of audio files.</p>
     </div>
@@ -108,14 +108,16 @@
   </a>
   </div>
 </div>
-</div>
 
 
-<div class="row">
+
+<p><br><br></p>
+<h2>Support</h2>
+<p>Feature request and issue report on Github: <br><br>
+<img src="../images/github-logo.png" style="height:24px;width: auto;"><a href="https://github.com/chengdu/Sounler" target="_blank">https://github.com/chengdu/Sounler</a></p>
+
 <p><br><br><br><br></p>
-<p><br><br><br><br></p>
 </div>
-
 
 
 
