--- a/en/guard.html
+++ b/en/guard.html
@@ -278,27 +278,27 @@ You need to import keyring from other system, e.g. Linux, and when backup or cha
 
     <b>a.</b> Right click Tom's public key and then select <b>"Edit Key"</b>,
        input password and on the prompt dialog select <b>"Primary"</b>,
-       check on <b>"set as your primary key"</b> and click <b>"Set and primary key"</b>. <br>
+       check on <b>"set as your primary key"</b> and click <b>"Set and primary key"</b> button. <br>
     <b>b.</b> Remove all key of Mary from the left side tree view. <br>
     <b>c.</b> Drag Mary@compnay_pubkey.asc into the left side tree view 
-       to emulate import Mary's public key. <br>
+       to emulate importing Mary's public key. <br>
     <b>d.</b> Drag the Mary's public key imported in the previous step 
-       from left side to the right side table as a <b>Recipients</b>. <br>
+       from left side to the right side table as a <b>Recipients</b>.<br>
     <b>e.</b> Drag a sample file from Finder into the right side table
        and then click <b>"Encrypt"</b> on the toolbar to crypt it, 
-       the output file will be a compressed file with a ".gpg" extension name. <br><br>
+       a compressed file with ".gpg" extension name will be created. <br><br>
 
 
 <b>Step 3.</b> Mary decrypt the file with her private key: <br><br>
 
-    <b>a.</b> Remove all key from the left side tree view. <br>
+    <b>a.</b> Remove all key from the left side tree view.<br>
     <b>b.</b> Drag Mary@compnay_pubkey.asc into the left side tree view 
-       to import Mary's public key. <br>
+       to import Mary's public key.<br>
     <b>c.</b> Drag Mary@compnay_privkey.asc into the left side tree view 
-       to import Mary's private key. <br>
+       to import Mary's private key.<br>
     <b>d.</b> Right click Mary's public key and then select <b>"Edit Key"</b>,
        input password and on the prompt dialog select <b>"Primary"</b>,
-       check on <b>"set as your primary key"</b> and click <b>"Set and primary key"</b>. <br>
+       check on <b>"set as your primary key"</b> and click <b>"Set and primary key"</b> button. <br>
     <b>e.</b> Drag the crypted file output from step 2 and then click <b>"Decrypt"</b> 
        on the toolbar to decrypt it. <br><br>
 
@@ -313,7 +313,7 @@ You need to import keyring from other system, e.g. Linux, and when backup or cha
 
 
 <h2>Feedback</h2>
-<p>Your help will drive us to improve it to better, please kindly report your feature request or issue on Github:<br></b><a href="https://github.com/chengdu/Guard7" target="_blank"> → https://github.com/chengdu/Guard7</a>, thanks.</p>
+<p>Feature request and issue management on Github:<br></b><a href="https://github.com/chengdu/Guard7" target="_blank"> → https://github.com/chengdu/Guard7</a>, thanks.</p>
 
 
 <div style="display:none;">
@@ -333,7 +333,6 @@ You need to import keyring from other system, e.g. Linux, and when backup or cha
   <li>GNU Privacy Guard, <a href="http://www.gnupg.org">http://www.gnupg.org</a>.</li>
   <li>Public key cryptography on Wikipedia, <a href="https://en.wikipedia.org/wiki/Public-key_cryptography">Public-key Cryptography</a>.</li>
 </ol>
-
 
 
 <p><br></p>
