--- a/en/guard.html
+++ b/en/guard.html
@@ -278,7 +278,7 @@ You need to import keyring from other system, e.g. Linux, and when backup or cha
 
     <b>a.</b> Right click Tom's public key and then select <b>"Edit Key"</b>,
        input password and on the prompt dialog select <b>"Primary"</b>,
-       check on <b>"set as your primary key"</b> and click <b>"Set and primary key"</b> button. <br>
+       check on <b>"set as your primary key"</b> and click <b>"Set as primary key"</b> button. <br>
     <b>b.</b> Remove all key of Mary from the left side tree view. <br>
     <b>c.</b> Drag Mary@compnay_pubkey.asc into the left side tree view 
        to emulate importing Mary's public key. <br>
@@ -298,7 +298,7 @@ You need to import keyring from other system, e.g. Linux, and when backup or cha
        to import Mary's private key.<br>
     <b>d.</b> Right click Mary's public key and then select <b>"Edit Key"</b>,
        input password and on the prompt dialog select <b>"Primary"</b>,
-       check on <b>"set as your primary key"</b> and click <b>"Set and primary key"</b> button. <br>
+       check on <b>"set as your primary key"</b> and click <b>"Set as primary key"</b> button. <br>
     <b>e.</b> Drag the crypted file output from step 2 and then click <b>"Decrypt"</b> 
        on the toolbar to decrypt it. <br><br>
 
