--- a/en/guard.html
+++ b/en/guard.html
@@ -308,8 +308,8 @@ You need to import keyring from other system, e.g. Linux, and when backup or cha
 <hr><br>
 <h2>Guard7 on Apple App Store</h2>
 <p>This cryptography tool is one of the top best-sales security app on App Store from 2018, thousands of copy have been downloaded from that time and people across the planet use it to protect their confidential information everyday.</p>
-<p><b class="warning">Note: </b> One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaves bad comments on the "rate and comment" of some good apps or vice versa to mislead people, so please judge one app's value by yourself instead of what they said.<br><br>
-<span class="warning">The more they maliciously attack this software, the more their bad intention are exposed, and the more affirmation of this software.</span></p>
+<p><b class="greenbig">Note:</b> One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaves bad comments on the "rate and comment" of some good apps or vice versa to mislead people, so please judge one app's value by yourself instead of what they said.<br><br>
+<span class="greenbig">The more they maliciously attack this software, the more their bad intention are exposed, and the more affirmation of this software.</span></p>
 
 
 <h2>Feedback</h2>
