--- a/en/speare.html
+++ b/en/speare.html
@@ -136,21 +136,16 @@
 
 <h2>Features</h2>
 <p><ul>
-<li>Well designed user operation interface. Intuitive and simple.</li>
-<li>High performance when managing large amount of files and big files.</li>
-<li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
-<li>Smoothly editing multiple files that written in different programming languages simultaneously.</li>
-<li>Supports almost all common programming languages syntax highlighting and parsing.</li>
-<li>Auto-completion, sensitively typing with keywords, live parsing symbol definition with priority.</li>
-<li>Jump to definition and fast locate code lines between editing files by symbol index, bookmark or searching.</li>
-<li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
-<li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
-<li>Fonts and colours customisation, supports self-defined schemes.</li>
-<li>Full featured Markdown editor, run Javascript code instantly, well supports Web development.</li>
-<li>Code block selection by double clicking the begin symbol of code block.</li>
-<li>Run syntax checking of the editing code instantly.</li>
-<li>Preview or playback all kinds of files, image, pdf, office documents, audio and video etc.</li>
-<li>Ultra lightweight.</li>
+<li>Full featured code editor, syntax highlighting, auto-completion, jump to definition, instant symbol indexing.</li>
+<li>Built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and TCL.</li>
+<li>Powerful workspace management. Intuitive and simple.</li>
+<li>Run syntax checking and run code instantly.</li>
+<li>Full featured Markdown editor, run Javascript code instantly.</li>
+<li>Powerful code navigation and call routines tracing ability.</li>
+<li>High performance when manage big file and very large project.</li>
+<li>Preview all kinds files, image, pdf, office documents, audio and video etc.</li>
+<li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
+<li>Really ultra lightweight.</li>
 </ul></p>
 
 
