--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
         <h1>iPowerReader</h1>
-        <p class="greenbig">Remote share your documents on iOS device anywhere.</p>
+        <p class="greenbig">The designedly Finder on iOS device.</p>
         <p class="lead">
         <b>iPowerReader</b> is a Finder-like app on iOS device, it was renamed from <b>iCodeEditor</b>, it is an:<br></p>
 <ul><li><lt>Universal file manager (File Explorer, i.e Finder on Mac).</lt></li>
@@ -35,18 +35,32 @@
 <li><lt>Universal multimedia player (Crafted music player and video player for iPhone and iPad).</lt></li></ul>
         </p>
     </div>
-    
+ 
+
+<img src="../images/editor/syn1.png" ><br><br>
+<img src="../images/editor/syn2.png" ><br><br>
+
+<h2>Why</h2>
+<p><ul><li>
+Select file or folder on MacBook → transfer and then view files on iPhone, or <br>
+Select file or folder on iPhone → transfer and then view files on MacBook. <br>
+<span class="greenbig">It's so intuitive and simple! <br>
+But, syncing mechanism made it so boring!</span><br>
+An iPhone can sync with only one computer at a time!<br>
+Transferring files between iPhone and MacBook always drive me angry!<br><br></li>
+<li class="greenbig">It's convenient but not necessary to store everything on cloud, there is still existing many reasons <br>
+to store Office documents, photo, video and other files on private disk, computer or other storage devices <br>
+to prevent the data be illegally accessed, used or analysed.</li></ul></p>
+
+<p>Transferring files between Mac and iOS devices is always difficult and pain!<br>
+You can't feel free to transfer files as intuitive as moving files in Finder!<br>
+So, this app developed to help you manage files in your iOS devices just like on your MacBook!</p>
+
+
 <p><video class="videobox" id="mainVideo" width="480" controls autoplay>
 <source src="/videos/editor.mp4" type="video/mp4">
 </video></p>
 <p>The above video is very old, but demonstrate the app's features.</p>
-
-
-
-<p class="greenbig">It's convenient but not necessary to store everything on cloud, there is still existing many reasons to store Office documents, photo, video and other files on private disk, computer or other storage devices to prevent the data be illegally accessed, used or analysed.</p>
-
-<h2>Why</h2>
-<p>Transferring files between iPhone and MacBook always makes me very angry! Transferring files between Mac and iOS devices is always difficult and pain! You can't feel free to transfer files as intuitive as moving files in Finder! So, this app developed to help you manage files in your iOS devices just like on your MacBook!</p>
 
 <h2>Fast share files between your Mac, Windows PC or Linux, Android and iOS devices</h2>
 <p><lt>iPowerReader is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free.</lt></p>
