--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -14,7 +14,7 @@
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
-<title>LittleFox, subtitle audio and video so easy.</title>
+<title>LittleFox, subtitle audio and video as simple as possible.</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
 <script src="../js/jquery.min.js"></script>
@@ -28,7 +28,7 @@
     <div class="jumbotron">
         <p><img src="../images/littlefox/logo.png" style="width: 120px;" /></p>
         <h1>LittleFox</h1>
-        <p class="greenbig">Subtitle audio and video so easy.</p>
+        <p class="greenbig">Subtitle audio and video as simple as possible.</p>
         <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, or just scale the resolution of your videos to slim them so that you can very easily share them with a very small file size.</p>
     </div>
     
