--- a/en/guard.html
+++ b/en/guard.html
@@ -76,7 +76,7 @@ They may crush your database and can't recover!</span><br>
 
 
 <h2>Basic Usage</h2>
-<p>You don't need to know more about public-key encryption at all, you can get industry-level information protection with just a few simple steps.</p>
+<p>You don't need to have deep knowledge of <b>"Public Key Cryptography"</b> at all, you can get industry-level strength information protection with just a few simple steps.</p>
 
 <ol><li><b>Generate a key pair for yourself.</b><br>
 Click <img src="../images/guard/keys.png" class="icon" /> and the system will generate a public and private key pair for you. You should send the public key to others who can then encrypt message for you. The private key is used to decrypt message and must be keeping for yourself. You SHOULD NOT send your private key to anybody, but keep it for yourself VERY CAREFULLY.<br><br>
