--- a/en/anida.html
+++ b/en/anida.html
@@ -53,7 +53,7 @@ a. Fast decoding speed. Whether running native machine code that compiled from C
 <li>Adaptable for common protocols such as RTMP (Real-Time Messaging Protocol), WebRTC (Web Realtime Communication), and industry standard RTP (Realtime Transport Protocol) and RTSP (Real Time Streaming Protocol).<br><br></li>
 <li>Small footprint, simple, and easy-to-use, designed for deeply embedded systems, written with ANSI C without extra dependencies (except the standard ANSI libc, several mathematical functions and I/O access) and can be easily ported to all platform and bind to all common programming languages.</li></ol>
 
-<p><b>Demonstration: </b><a href="http://blog.sevenuc.com" target="_blank"> → ♪ demo link</a>.</p>
+<p><b>Demonstration: </b><a href="javascript:void(0);" target="_blank"> → ♪ demo link</a>.</p>
 
 <h2>Simple Comparison Table:</h2>
 <b>Audio Codec Comparison:</b><br>
@@ -189,13 +189,13 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
 </table>
 
 
-<p>The offline Anida music player, download here: <a href="http://www.sevenuc.com/download/Anida.tar.gz">Anida.tar.gz (27.6MB)</a><br>
+<p>The offline Anida music player, download here: <a href="javascript:void(0);">Anida.tar.gz (27.6MB)</a><br>
 <em>SHA256 checksum:<br>
 2c6f4637d7ee6f7bd02e121a9d72508d9c3235f8169a0496397c192fb5f71944</em><br>
 </p>
 
 
-<p>The sample app of the javascript version of Anida decoder can be viewed online, please take a look here: <a href="http://blog.sevenuc.com" target="_blank"> → ♪  demo link</a>.</p>
+<p>The sample app of the javascript version of Anida decoder can be viewed online, please take a look here: <a href="javascript:void(0);" target="_blank"> → ♪  demo link</a>.</p>
 
 
 <h2>Intellectual Property Transfer</h2>
